kubernetes/day11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: giropops-service
  labels:
    app: giropops-app
spec:
  selector:
    app: giropops-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      name: tcp-app
