kubernetes/day11/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /giropops-app
          pathType: Prefix
          backend:
            service:
              name: giropops-service
              port:
                number: 5000
