kubernetes/day11/ingress-4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giropops-app
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: giropops-service
                port:
                  number: 5000
